<resources>
    <string name="app_name">HandyMan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_application_id" translatable="false">HandyManApp</string>
    <string name="facebook_login_protocol_scheme" translatable="false">HandyManApp</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_logout">LogOut</string>
    <string name="menu_profile">Profile</string>
    <string name="your_profile">Your Profile</string>
    <string name="full_name">Full Name</string>
    <string name="company">Company</string>
    <string name="years_of_experience">Years Of Experience</string>
    <string name="description">Description</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="email">Email</string>
    <string name="save_profile">Save Profile</string>
    <string name="nameandcompany">Name and Company</string>
    <string name="profilepicture">profilepicture</string>
    <string name="watch_profile">watchprofile</string>
    <string name="microphone">microphone</string>
    <string name="input">Input</string>
    <string name="chat">Chat</string>
    <string name="logo">logo</string>
    <string name="handymanapp">HandyManApp</string>
    <string name="contact_us">Contact us</string>
    <string name="back">back</string>
    <string name="send_email">Send Email</string>
    <string name="call">Call</string>
    <string name="_11223344">11223344</string>
    <string name="kevin_studie_outlook_dk">Kevin.Studie@outlook.dk</string>
    <string name="_20625133">20625133</string>
</resources>