<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chat"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_send_message_button"
        android:id="@+id/floatingbutton"
        android:tint="@color/black"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/microphone"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/floatingbutton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input"
            android:id="@+id/input" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:contentDescription="@string/back"
        android:layout_marginStart="5dp"/>

    <ListView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/floatingbutton"
        android:layout_alignParentStart="true"
        android:id="@+id/listOfChat"
        android:layout_marginBottom="20dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="20dp"/>


</RelativeLayout>